--- a/config/database.yml
+++ b/config/database.yml
@@ -6,20 +6,25 @@
 #
 default: &default
   adapter: postgresql
+  port: 5432
   pool: 5
   timeout: 5000
+  database: awsgis 
+  host: aws-gis.cot74qrzzmqu.us-west-2.rds.amazonaws.com
+  user: master
+  password: mastermaster
 
 development:
   <<: *default
-  database: db/db_development
+  #database: db/db_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/db_test
+  #database: db/db_test
 
 production:
   <<: *default
-  database: db/db_production
+  #database: db/db_production
